# shasta2

Executable/: CMakeLists.txt
conf/: ONT-diploid-40x-60kb-Q25-2026.02.24.conf
scripts/: Assemble.py  CreateCompleteAnchorGraph.py  RemoveZeroLengthSegments.py  SplitFastaByCoverage.py
src/: AnchorGraph.hpp  Assembler.cpp  AssemblerHttpServer-Assembly.cpp  AssemblyGraph-BubbleCleanup.cpp  AssemblyGraph-FromPaths.cpp  AssemblyGraph-Phasing.cpp  AssemblyGraph.cpp  AssemblyGraph.hpp  Journeys.cpp  LocalAssembly7.cpp  LocalAssembly7.hpp  PythonModule.cpp  ReadFollowing1.cpp  ReadFollowing1.hpp  ReadFollowing4.cpp  ReadFollowing4.hpp  findReachableVertices.hpp
